# HorizonDbgServer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  flake.nix  pfs0.nu
.cargo/: config.toml
.github/workflows/: build.yml
config/: config.cmake  npdm.json  toolbox.json
include/hdbg/: DebugSession.h  DebuggerService.h
include/hdbg/protocol/: Interface.h  Packets.h
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.cpp  panic_handler.rs
src/hdbg/: DebugSession.cpp
src/interop/: cpp_interop.rs  mutex.rs  rust_interop.cpp
src/processor/: infra.rs  mod.rs  processor.h
src/send/: mod.rs
src/server/: mod.rs
