[workspace]
resolver = "3"
members = ["macros"]

[package]
name = "horizon-dbg-interop"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = { version = "1.0.173", default-features = false, features = ["alloc"] }
horizon-dbg-protocol = { git = "https://github.com/Sanae6/horizon-dbg", version = "0.1.0" }
macros = { version = "0.1.0", path = "macros" }
maitake-sync = "0.2.2"
postcard-rpc = "0.11.13"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
vtable-rs = "0.1.4"
zerocopy = { version = "0.8.26", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.173"
